crates/keron-lang/tests/corpus/errors/check/for_map_with_single.keron
val m: Map<String, Int> = {"a": 1}

for x in m {
  reconcile m
}
